# derby-name-scrapers

./: README.md  pyproject.toml  scrape_derby_names.py
.github/: dependabot.yml
.github/workflows/: weekly-scrape.yml
data/: derby_names.csv
