[project]
name = "derby-name-scrapers"
version = "0.1.0"
description = "Scrape roller derby names and export to CSV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "requests>=2.32.3",
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false